--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-			<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		<!--Fonts-->
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+		
+			<title>Chadwick Savage</title>
+		
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/main.css">
+
+	</head>
+	
+	<body>
+		<div class="container-fluid">
+			
+			
+		</div>
+		
+	</body>
