--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 	
 	<body>
 		<div class="container-fluid">
+			<div class="row standout">
+				<div class="col-md-12">
+					<h1>Let me Help You Stand Out!</h1>
+				</div>
+			</div>
 			
 			
 		</div>
