--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	</head>
 	
 	<body>
+		<!--Wrapper-->
 		<div class="container-fluid">
 			<div class="row standout">
 				<div class="col-md-12">
@@ -25,7 +26,7 @@
 				</div>
 			</div>
 			
-			
+		<!--Close Wrapper-->	
 		</div>
 		
 	</body>
