--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
 
 	</head>
 	
