--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<div id="ac-wrapper" style='display:none'>
     <div id="popup">
         <center>
-             <h2>This website was built in a day. It has no media queries just yet. <br>Please forgive me but if you are viewing on an exceptionally large or exceptionally small screen, <br>it will not load properly.<br>A laptop is best for viewing this website.</h2>    
+             <h2 style="color:black; font-size:22px;">This website was built in a day. It has no media queries just yet. <br>Please forgive me but if you are viewing on an exceptionally large or exceptionally small screen, <br>it will not load properly.<br>A laptop is best for viewing this website.</h2>    
             <input type="submit" name="submit" value="Gotcha!" onClick="PopUp('hide')" />
         </center>
     </div>
