--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@ window.onload = function () {
         PopUp('show');
     }, 5000);
 }
+	</script>
+	<script type="text/javascript">
 
-
-let image = document.querySelector('#contact')
+let image = document.getElementById('contact')
 image.onclick = toggleClass();
 
 function toggleClass(){
