--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@ window.onload = function () {
 	</script>
 	<script type="text/javascript">
 
-let image = document.getElementById('contact')
+let image = document.querySelector('#contact')
 image.onclick = toggleClass();
 
-function toggleClass(){
-	if (image.className = 'orange') {
+function toggleClass{
+	if (image.className == 'orange') {
 		image.className = 'dgrey'
 	} else {
 		image.className = 'orange'
