--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ window.onload = function () {
 let image = document.querySelector('#contact')
 image.onclick = toggleClass();
 
-function toggleClass{
+function toggleClass(){
 	if (image.className == 'orange') {
 		image.className = 'dgrey'
 	} else {
