--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@ let image = document.querySelector('#contact')
 image.onclick = toggleClass();
 
 function toggleClass(){
-	if (image.className == 'orange') {
-		image.className = 'dgrey'
+	if (image.className == '.orange') {
+		image.className = '.dgrey'
 	} else {
-		image.className = 'orange'
+		image.className = '.orange'
 	}
 }
 </script>
