--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@ window.onload = function () {
 	<script type="text/javascript">
 
 let image = document.querySelector('#contact')
-image.onclick = toggleClass();
+image.onclick = toggleClass;
 
 function toggleClass(){
-	if (image.className == '.orange') {
-		image.className = '.dgrey'
+	if (image.className == 'orange'){
+		image.className = 'dgrey'
 	} else {
-		image.className = '.orange'
+		image.className = 'orange'
 	}
 }
 </script>
