--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@ let poop = document.querySelector('#contact')
 poop.onclick = toggleClass;
 
 function toggleClass(){
-	if (poop.className == 'orange'){
-		poop.className = 'dgrey'
+	if (poop.className == 'row orange'){
+		poop.className = 'row dgrey'
 	} else {
-		poop.className = 'orange'
+		poop.className = 'row orange'
 	}
 }
 </script>
