--- a/index.html
+++ b/index.html
@@ -109,4 +109,16 @@
 		
 	</body>
 		</html>
+	
+	<script type="text/javascript">
+		function PopUp(hideOrshow) {
+    if (hideOrshow == 'hide') document.getElementById('ac-wrapper').style.display = "none";
+    else document.getElementById('ac-wrapper').removeAttribute('style');
+}
+window.onload = function () {
+    setTimeout(function () {
+        PopUp('show');
+    }, 5000);
+}
+	</script>
 		
