--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 					<ul>
 						<li><a href="index.html" data-content="Change this Text to Describe Home">Home</a></li>
 
-						<li><a href="pages/about.html" data-content="This can be a quote, funny saying, short description, etc">About</a></li>
+						<li><a href="#about" data-content="This can be a quote, funny saying, short description, etc">About</a></li>
 
-						<li><a href="pages/blog.html" data-content="Tell your story through a blog if you wish, blog about the career you want or whatever your passion is">Blog</a></li>
+						<li><a href="#blog" data-content="Tell your story through a blog if you wish, blog about the career you want or whatever your passion is">Blog</a></li>
 
-						<li><a href="pages/shop.html" data-content="You can share your resume or something here">My Work</a></li>
+						<li><a href="#work" data-content="You can share your resume or something here">My Work</a></li>
 
-						<li><a href="pages/contact.html" data-content="contact information or short catchy phrase like press 1 now to speak to me">Contact</a></li>
+						<li><a href="#contact" data-content="contact information or short catchy phrase like press 1 now to speak to me">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -66,7 +66,30 @@
 			<div class="back2top">
 				<a href="#top" class="white"><i class="fa fa-arrow-circle-o-up fa-2x"></i></a>
 			</div>
+			
+			<!-- About -->
+			<div class="row">
+				<div class="col-xs-6"></div>
+				<div class="col-xs-6"></div>
+			</div>
+			
+			<!-- Blog -->
+			<div class="row">
+				<div class="col-xs-6"></div>
+				<div class="col-xs-6"></div>
+			</div>
+			
+			<!-- Work -->
+			<div class="row">
+				<div class="col-xs-6"></div>
+				<div class="col-xs-6"></div>
+			</div>
 		
+			<!-- Contact -->
+			<div class="row">
+				<div class="col-xs-6"></div>
+				<div class="col-xs-6"></div>
+			</div>
 		
 		<!--Close Wrapper-->	
 		</div>
