--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
 			</div>
 			
 			<!-- About -->
-			<div class="row">
+			<div class="row wetlands">
 				<div class="col-xs-6"></div>
 				<div class="col-xs-6"></div>
 			</div>
 			
 			<!-- Blog -->
-			<div class="row">
+			<div class="row impala">
 				<div class="col-xs-6"></div>
 				<div class="col-xs-6"></div>
 			</div>
 			
 			<!-- Work -->
-			<div class="row">
+			<div class="row skye">
 				<div class="col-xs-6"></div>
 				<div class="col-xs-6"></div>
 			</div>
 		
 			<!-- Contact -->
-			<div class="row">
+			<div class="row snow_fox">
 				<div class="col-xs-6"></div>
 				<div class="col-xs-6"></div>
 			</div>
