--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
 			</div>
 			
 			<!-- About -->
-			<div class="row wetlands">
+			<div class="row wetlands" id="about">
 				<div class="col-xs-6"></div>
 				<div class="col-xs-6"></div>
 			</div>
 			
 			<!-- Blog -->
-			<div class="row impala">
+			<div class="row impala" id="blog">
 				<div class="col-xs-6"></div>
 				<div class="col-xs-6"></div>
 			</div>
 			
 			<!-- Work -->
-			<div class="row skye">
+			<div class="row skye" id="work">
 				<div class="col-xs-6"></div>
 				<div class="col-xs-6"></div>
 			</div>
 		
 			<!-- Contact -->
-			<div class="row snow_fox">
+			<div class="row snow_fox" id="contact">
 				<div class="col-xs-6"></div>
 				<div class="col-xs-6"></div>
 			</div>
