--- a/index.html
+++ b/index.html
@@ -64,32 +64,15 @@
 			<!-- Back to Top Arrow --> 
 			
 			<div class="back2top">
-				<a href="#top" class="white"><i class="fa fa-arrow-circle-o-up fa-2x"></i></a>
+				<a href="https://www.instagram.com/" class="white"><i class="fa fa-instagram fa-2x"></i></a>
 			</div>
 			
-			<!-- About -->
-			<div class="row wetlands" id="about">
-				<div class="col-xs-6"></div>
-				<div class="col-xs-6"></div>
-			</div>
-			
-			<!-- Blog -->
-			<div class="row impala" id="blog">
+			<!-- Home Info -->
+			<div class="row feature">
 				<div class="col-xs-6"></div>
 				<div class="col-xs-6"></div>
 			</div>
 			
-			<!-- Work -->
-			<div class="row skye" id="work">
-				<div class="col-xs-6"></div>
-				<div class="col-xs-6"></div>
-			</div>
-		
-			<!-- Contact -->
-			<div class="row snow_fox" id="contact">
-				<div class="col-xs-6"></div>
-				<div class="col-xs-6"></div>
-			</div>
 		
 		<!--Close Wrapper-->	
 		</div>
@@ -126,7 +109,7 @@
 	
 		
 	</body>
-		</html>
+</html>
 	
 	
 		
