--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,1 +1,116 @@
+<!DOCTYPE html> <!-- Tells the Browser that this document is an html document -->
+<html lang="en"> <!-- Tells the Browser that this document's primary language is english -->
+
+	<head> <!-- All the stuff you don't see that sets up the webpage -->
+		
+		<meta charset="utf-8"> <!-- Which set of keyboard characters to use --> 
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- Makes it work with old microsoft edge -->
+		<meta name="viewport" content="width=device-width, initial-scale=1"><!-- Content should be the same width as the viewport (the size of the window you're viewing it on) -->
+		
+		<!--Fonts-->
+			<!-- I will show you how to import these from google -->
+		    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
+    		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
+		
+			<title>Chadwick Savage</title> <!-- This is what shows up in the tab up top -->
+		
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		
+		<!-- Font Awesome -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		
+		<!-- Custom Styles -->
+		<link rel="stylesheet" href="../css/main.css">
+		
+		 
+	</head>
+	
+	<body>
+		<!-- Wrapper -->
+		<div class="container">
+
+
+			<!-- Navigation -->
+			
+			<div class="nav-menu" name="top">
+				<nav role="navigation">
+					<ul>
+						<li><a href="../index.html" data-content="Change this Text to Describe Home">Home</a></li>
+
+						<li><a href="../pages/about.html" data-content="This can be a quote, funny saying, short description, etc">About</a></li>
+
+						<li><a href="../pages/blog.html" data-content="Tell your story through a blog if you wish, blog about the career you want or whatever your passion is">Blog</a></li>
+
+						<li><a href="../pages/work.html" data-content="You can share your resume or something here">My Work</a></li>
+
+						<li><a href="../pages/contact.html" data-content="contact information or short catchy phrase like press 1 now to speak to me">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+			
+			<!-- Hamburger Menu -->
+
+			<section class="nav-wrap">
+				<div class="triple_lines">
+					<span class="bar-top"></span>
+					<span class="bar-middle"></span>
+					<span class="bar-bottom"></span>
+				</div>
+			</section>
+			
+			<!-- Back to Top Arrow --> 
+			
+			<div class="back2top">
+				<a href="https://www.instagram.com/" class="white"><i class="fa fa-instagram fa-2x"></i></a>
+			</div>
+			
+			<!-- Contact -->
+			<div class="row snow_fox">
+				<div class="col-xs-6"></div>
+				<div class="col-xs-6"></div>
+			</div>
+			
+		
+		<!--Close Wrapper-->	
+		</div>
+		
+		<!-- Scripts add interactivity to our website -->
+		
+		<!-- JQuery -->
+		<script
+		  src="https://code.jquery.com/jquery-3.2.1.min.js"
+		  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+		  crossorigin="anonymous">
+		</script>
+
+		<!-- Bootstrap Javascript -->
+		<script 
+			src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+		</script>
+
+		<!-- Velocity.js -->
+		<script 
+			src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js">
+		</script>
+
+		<script 
+			src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.min.js">
+		</script>
+
+
+
+		<!-- Custom JavaScript -->
+		<script 
+			src="../js/main.js">
+		</script>
+	
+		
+	</body>
+</html>
+	
+	
+		
 
