--- a/pages/about.html
+++ b/pages/about.html
@@ -40,13 +40,13 @@
 					<ul>
 						<li><a href="../index.html" data-content="Change this Text to Describe Home">Home</a></li>
 
-						<li><a href="../pages/about.html" data-content="This can be a quote, funny saying, short description, etc">About</a></li>
+						<li><a href="../pages/about.html" data-content="The songs on the radio is okay, but taste in music is youre face">About</a></li>
 
-						<li><a href="../pages/blog.html" data-content="Tell your story through a blog if you wish, blog about the career you want or whatever your passion is">Blog</a></li>
+						<li><a href="../pages/blog.html" data-content="Hi, My name is Samira, and I enjoy listening to Twenty One Pilots, and i want to be a traveling photograppher when I gorw up. Although i want to travel the world i want to live in Barcelona, SPain, and thats my dream!">Blog</a></li>
 
 						<li><a href="../pages/work.html" data-content="You can share your resume or something here">My Work</a></li>
 
-						<li><a href="../pages/contact.html" data-content="contact information or short catchy phrase like press 1 now to speak to me">Contact</a></li>
+						<li><a href="../pages/contact.html" data-content="you can email me at samirab@c5georgia.org or at samirabphotography@gmail.com you can find me on flickr @ pizzalover2017 (username)">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
