--- a/pages/blog.html
+++ b/pages/blog.html
@@ -40,7 +40,7 @@
 					<ul>
 						<li><a href="../index.html" data-content="Change this Text to Describe Home">Home</a></li>
 
-						<li><a href="../pages/about.html" data-content=The songs on the radio are okay, but my taste in music is your face! That is my favorite quote, from my favorite song, by TWenty One Pilots.>About</a></li>
+						<li><a href="../pages/about.html" data-content="The songs on the radio are okay, but my taste in music is your face! That is my favorite quote, from my favorite song, by TWenty One Pilots".>About</a></li>
 
 						<li><a href="../pages/blog.html" data-content="Tell your story through a blog if you wish, blog about the career you want or whatever your passion is">Blog</a></li>
 
